# SpotifyPlaylist

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: handle-codex-review.md
.claude/scripts/codex-review/: anti-loop-check.sh  dirty-files.sh  get-comments.sh  post-skipped.sh  pr-info.sh  trigger.sh
.github/workflows/: ci.yml
app/: db.py  main.py  spotify_client.py
app/auth/: router.py  tokens.py
docs/roadmap/: ROADMAP.md  answer_chatgpt.md  answer_claude.md  answer_deepseek.md  answer_gemini.md  answer_grok.md  prompt.md
tests/: conftest.py  test_auth_router.py  test_auth_tokens.py  test_db.py  test_importer.py  test_library_router.py  test_me.py
